package src;

public class Librarian extends Person{
    int EmployeeID;
}
